--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.rtl{
+  direction: rtl;
+}
+.loadingContainer{
+  min-height: 100vh;
+  background: linear-gradient(50deg, rgb(0, 0, 0), rgb(1, 3, 5), rgb(1, 6, 7), #000913);
+  color: white;
+}
+.loading{
+  display: block;
+  margin: auto;
+  padding-top: 10rem;
+}
